944 - Fixed text spacing in certain sections on the bcrhp landing page
Reverted header spacing.

--- a/src/common/media/css/bc_index.css
+++ b/src/common/media/css/bc_index.css
@@ -245,7 +245,7 @@ h3.app-info-block-title {
     font-weight: 700;
     font-size: 24px;
     line-height: 36px;
-    margin-bottom: 12px;
+    margin-bottom: 30px;
     /* identical to box height, or 150% */
     display: flex;
     align-items: center;
